// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container appends custom className 1`] = `
<DocumentFragment>
  <div
    class="container mx-auto sm:max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl 2xl:max-w-screen-2xl px-4 text-red-100"
  />
</DocumentFragment>
`;

exports[`Container renders contents properly 1`] = `
<DocumentFragment>
  <div
    class="container mx-auto sm:max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl 2xl:max-w-screen-2xl px-4"
  >
    contents
  </div>
</DocumentFragment>
`;

exports[`Container renders custom tagName properly 1`] = `
<DocumentFragment>
  <header
    class="container mx-auto sm:max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl 2xl:max-w-screen-2xl px-4"
  />
</DocumentFragment>
`;
